--- a/css/style.css
+++ b/css/style.css
@@ -108,8 +108,10 @@ input, select {
 }
 
 .small {
-  font-size: 13px;
-  opacity: 0.8;
+  font-size: 14px;
+  opacity: 0.85;
+  text-align: center;
+  line-height: 1.4;
 }
 
 .hidden {
@@ -134,6 +136,7 @@ input, select {
   display: block;
   margin: 20px auto;
 }
+
 
 
 
