--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,7 @@ h1 {
   margin-bottom: 14px;
 }
 
-p p {
+p {
   font-size: 18px;
   line-height: 1.5;
   opacity: 0.95;
@@ -193,6 +193,7 @@ input, select {
   font-size: 14px;
   opacity: 0.9;
 }
+
 
 
 
